# Game-Notifier

./: .gitignore  LICENSE  README.md  anything.md  pyproject.toml
config/: config_example.json
scripts/: analyze.py  latest.pyw  read_log.py  restore_db.py  tray_icon.pyw
src/game_notifier/: __init__.py  analysis.py  app.py  config.py  logging_setup.py  notifier.py  paths.py  storage.py  tray.py
src/game_notifier/ui/: __init__.py  _builder.py  _controller.py  _dialogs.py  _standalone.py
tests/: test_app_process.py  test_config_load.py  test_storage_db.py
